불필요한 컬럼제거, 성별, 나이 추가, 열 클릭 시 뷰어로 바로 이동

--- a/platform/i18n/src/locales/en-US/StudyList.json
+++ b/platform/i18n/src/locales/en-US/StudyList.json
@@ -8,6 +8,8 @@
   "NumOfStudiesHiggerThan100Message": "Filter the list to 100 studies or less to enable sorting",
   "Modality": "Modality",
   "PatientName": "Patient Name",
+  "PatientAge": "Age",
+  "PatientSex": "Gender",
   "Previous": "< Back",
   "Page": "Page",
   "Next": "Next >",
@@ -15,5 +17,7 @@
   "Studies": "Studies",
   "StudyDate": "Study Date",
   "StudyDescription": "Description",
-  "StudyList": "Study List"
+  "StudyList": "Study List",
+  "Osteo": "PROS CXR: OSTEO",
+  "AIScore": "AI Score"
 }
